--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="photo_mode">Take Pictures</string>
     <string name="need_linked_account_message">You need to link this application with your dropbox account before you can take pictures</string>
     <string name="need_linked_account_title">Error</string>
-
+    <string name="ok">OK</string>
 </resources>
